# opengl-sandbox

./: .gitmodules  CMakeLists.txt
resources/shaders/: basic.shader
src/: GLUtils.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  app.cpp  app.h  gl_utils.h  index_buffer.cpp  index_buffer.h  main.cpp  scene.cpp  scene.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
